--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -3,6 +3,6 @@ FROM node:lts-alpine
 RUN yarn global add nodemon
 RUN yarn global add @adonisjs/cli
 
-EXPOSE 1337
+EXPOSE 3333
 
-CMD [ "adonis", "serve", "--dev" ]
+CMD [ "adonis", "serve", "--dev", "--polling" ]
