--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,15 @@
 HOST=0.0.0.0
 PORT=3333
 NODE_ENV=development
-
-APP_NAME=AdonisJs
+APP_NAME=BookNTalk
 APP_URL=http://${HOST}:${PORT}
-
 CACHE_VIEWS=false
-
 APP_KEY=
-
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
+DB_USER=user
+DB_PASSWORD=password
 DB_DATABASE=adonis
 DB_ROOT_PASSWORD=root
 HASH_DRIVER=bcrypt
